--- a/apps/widget/public/index.html
+++ b/apps/widget/public/index.html
@@ -8,7 +8,7 @@
     <noscript>
         You need to enable JavaScript to run this app.
     </noscript>
-    <div id="app"></div>
+    <div id="app" class="make-widget"></div>
     <script nonce="___NONCE_ID___">
       window.INITIAL_STATE = "__INITIAL_STATE__"
       window.API_URL = "__API_URL__";
