feat(global): inactivity modale and various styles update

--- a/apps/widget/public/index.html
+++ b/apps/widget/public/index.html
@@ -4,11 +4,11 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="theme-color" content="#ffffff">
   </head>
-  <body>
+  <body class="make-widget">
     <noscript>
         You need to enable JavaScript to run this app.
     </noscript>
-    <div id="app" class="make-widget"></div>
+    <div id="app"></div>
     <script nonce="___NONCE_ID___">
       window.INITIAL_STATE = "__INITIAL_STATE__"
       window.API_URL = "__API_URL__";
