refactor(global): simplify env variables, refactor tracking and fix cypress tests
fixes #MP-2278

--- a/apps/front/public/index.html
+++ b/apps/front/public/index.html
@@ -11,8 +11,7 @@
     <div id="app"></div>
     <script nonce="___NONCE_ID___">
       window.INITIAL_STATE = "__REDUX__"
-      window.API_URL = "__API_URL__";
-      window.PROXY_TARGET_API_URL = "__PROXY_TARGET_API_URL__";
+      window.API_URL_CLIENT_SIDE = "___API_URL_CLIENT_SIDE___";
       window.FRONT_URL = "__FRONT_URL__";
       window.NODE_ENV = "___NODE_ENV___";
       window.PORT = "___PORT___";
