--- a/apps/widget/public/index.html
+++ b/apps/widget/public/index.html
@@ -11,7 +11,7 @@
     <div id="app"></div>
     <script nonce="___NONCE_ID___">
       window.INITIAL_STATE = "__INITIAL_STATE__"
-      window.API_URL = "__API_URL__";
+      window.API_URL_CLIENT_SIDE = "___API_URL_CLIENT_SIDE___";
       window.NODE_ENV = "___NODE_ENV___";
       window.PORT = "___PORT___";
     </script>
