fix(global): change how to get referrer on widget:x

--- a/apps/widget/demo-iframe.html
+++ b/apps/widget/demo-iframe.html
@@ -20,7 +20,7 @@
       <div
         style="position: relative; min-height: 570px; width: 100%; overflow: hidden; margin-bottom: 20px;"
       >
-      <iframe frameborder="0" scrolling="no" width="100%" height="575" style="min-height: 575px" src="https://local.makeorg.tech/?questionSlug=lupus-lupe-lupum&title=Sator+arepo+tenet+opera+rotas%3F&source=test_tech_ter&color=0:0:0:1&country=FR&language=fr&owner=9113f0c5-6d82-4d1b-8197-cbb700ce6ccc&hash=MjAyMS0wOC0yN1QxNjoxODoyMi4xNTda-8d34c133dd3e3eb0facce3caa76ca4fef648eea6131c359d42e23a971958f0a15967fdc25dccef0ac8cd57f42613bf57a2608c8329c10c77a24e7e91228f4b8e"></iframe>
+      <iframe frameborder="0" scrolling="no" width="100%" height="550" style="min-height: 550px" src="__URL__"></iframe>
       </div>
     </body>
   </html>
