--- a/apps/front/public/index.html
+++ b/apps/front/public/index.html
@@ -16,6 +16,6 @@
       window.NODE_ENV = "___NODE_ENV___";
       window.PORT = "___PORT___";
     </script>
-    <!-- [html-validate-disable wcag/h32, attribute-allowed-values, element-required-attributes, input-missing-label] -->
+    <!-- [html-validate-disable wcag/h32, wcag/h37, attribute-allowed-values, element-required-attributes, input-missing-label] -->
   </body>
 </html>
