fix(widget): 2690_fixes_widget

--- a/apps/widget/demo-iframe.html
+++ b/apps/widget/demo-iframe.html
@@ -18,9 +18,9 @@
   
     <body>
       <div
-        style="position: relative; min-height: 570px; width: 100%; overflow: hidden; margin-bottom: 20px;"
+        style="position: relative; min-height: 572px; width: 635px; overflow: hidden; margin-bottom: 20px; margin: auto"
       >
-      <iframe frameborder="0" scrolling="no" width="100%" height="550" style="min-height: 550px" src="__URL__"></iframe>
+      <iframe frameborder="0" scrolling="no" width="100%" height="572" style="min-height: 572px" src="__URL__"></iframe>
       </div>
     </body>
   </html>
