--- a/apps/front/public/index.html
+++ b/apps/front/public/index.html
@@ -12,6 +12,7 @@
     <script nonce="___NONCE_ID___">
       window.INITIAL_STATE = "__REDUX__"
       window.API_URL_CLIENT_SIDE = "___API_URL_CLIENT_SIDE___";
+      window.FB_PIXEL_ID = "___FB_PIXEL_ID___";
       window.FRONT_URL = "__FRONT_URL__";
       window.NODE_ENV = "___NODE_ENV___";
       window.PORT = "___PORT___";
