--- a/apps/widget/demo-iframe.html
+++ b/apps/widget/demo-iframe.html
@@ -1,27 +1,40 @@
-  <!DOCTYPE html>
-  <html lang="fr">
-    <head>
-      <meta
-        http-equiv="Cache-control"
-        content="no-cache, no-store, must-revalidate"
-      />
-      <meta http-equiv="Pragma" content="no-cache" />
-      <meta charset="utf-8" />
-      <meta
-        name="viewport"
-        content="width=device-width, initial-scale=1, shrink-to-fit=no"
-      />
-      <meta name="theme-color" content="#000000" />
-      <style-data></style-data>
-      <title>Make.org widget iframe</title>
-    </head>
-  
-    <body>
-      <div
-        style="position: relative; min-height: 572px; width: 635px; overflow: hidden; margin-bottom: 20px; margin: auto"
-      >
-      <iframe frameborder="0" scrolling="no" width="100%" height="572" style="min-height: 572px" src="__URL__"></iframe>
-      </div>
-    </body>
-  </html>
-  
+<!DOCTYPE html>
+<html lang="fr">
+  <head>
+    <meta
+      http-equiv="Cache-control"
+      content="no-cache, no-store, must-revalidate"
+    />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <meta name="theme-color" content="#000000" />
+    <style-data></style-data>
+    <title>Make.org widget iframe</title>
+  </head>
+
+  <body>
+    <div
+      style="
+        position: relative;
+        min-height: 572px;
+        max-width: 635px;
+        overflow: hidden;
+        margin-bottom: 20px;
+        margin: auto;
+      "
+    >
+      <iframe
+        frameborder="0"
+        scrolling="no"
+        width="100%"
+        height="572"
+        style="min-height: 572px"
+        src="__URL__"
+      ></iframe>
+    </div>
+  </body>
+</html>
