--- a/apps/front/public/index.html
+++ b/apps/front/public/index.html
@@ -8,7 +8,7 @@
     <noscript> You need to enable JavaScript to run this app. </noscript>
     <div id="app"></div>
     <script nonce="___NONCE_ID___">
-      window.INITIAL_STATE = '__REDUX__';
+      window.INITIAL_STATE = '__INITIAL_STATE__';
       window.API_URL_CLIENT_SIDE = '___API_URL_CLIENT_SIDE___';
       window.FB_PIXEL_ID = '___FB_PIXEL_ID___';
       window.FRONT_URL = '__FRONT_URL__';
