fix(global): twitter pixel env var

--- a/apps/front/public/index.html
+++ b/apps/front/public/index.html
@@ -11,6 +11,7 @@
       window.INITIAL_STATE = '__INITIAL_STATE__';
       window.API_URL_CLIENT_SIDE = '___API_URL_CLIENT_SIDE___';
       window.FB_PIXEL_ID = '___FB_PIXEL_ID___';
+      window.TW_PIXEL_ID = '___TW_PIXEL_ID___';
       window.FRONT_URL = '__FRONT_URL__';
       window.NODE_ENV = '___NODE_ENV___';
       window.PORT = '___PORT___';
