feat(front): assembly added i18n

--- a/apps/assembly/public/index.html
+++ b/apps/assembly/public/index.html
@@ -10,6 +10,7 @@
     <script nonce="___NONCE_ID___">
       window.API_URL_CLIENT_SIDE = '___API_URL_CLIENT_SIDE___';
       window.PORT = '___PORT___';
+      window.LANGUAGE = '___LANGUAGE___';
     </script>
     <!-- [html-validate-disable wcag/h32, wcag/h37, attribute-allowed-values, element-required-attributes, input-missing-label] -->
   </body>
