feat(global): added routing client and ssr for panoramic
closes: MP-3517

--- a/apps/assembly/public/index.html
+++ b/apps/assembly/public/index.html
@@ -8,9 +8,13 @@
     <noscript> You need to enable JavaScript to run this app. </noscript>
     <div id="app"></div>
     <script nonce="___NONCE_ID___">
-      window.API_URL_CLIENT_SIDE = '___API_URL_CLIENT_SIDE___';
+      window.CONTENT_URL_SERVER_SIDE = '___CONTENT_URL_SERVER_SIDE___';
+      window.ASSEMBLY_URL_SERVER_SIDE = '___ASSEMBLY_URL_SERVER_SIDE___';
       window.PORT = '___PORT___';
-      window.LANGUAGE = '___LANGUAGE___';
+      window.FRONT_URL = '__FRONT_URL__';
+      window.MIXPANEL_TOKEN = '__MIXPANEL_TOKEN__';
+      window.NODE_ENV = '___NODE_ENV___';
+      window.PORT = '___PORT___';
     </script>
     <!-- [html-validate-disable wcag/h32, wcag/h37, attribute-allowed-values, element-required-attributes, input-missing-label] -->
   </body>
