feat(assembly): add content api, services and state

--- a/apps/assembly/public/index.html
+++ b/apps/assembly/public/index.html
@@ -14,11 +14,12 @@
     <noscript> You need to enable JavaScript to run this app. </noscript>
     <div id="app"></div>
     <script nonce="___NONCE_ID___">
+      window.ASSEMBLY_STATE = '___ASSEMBLY_STATE___';
       window.CONTENT_URL_SERVER_SIDE = '___CONTENT_URL_SERVER_SIDE___';
       window.ASSEMBLY_URL_SERVER_SIDE = '___ASSEMBLY_URL_SERVER_SIDE___';
       window.PORT = '___PORT___';
-      window.FRONT_URL = '__FRONT_URL__';
-      window.MIXPANEL_TOKEN = '__MIXPANEL_TOKEN__';
+      window.FRONT_URL = '___FRONT_URL___';
+      window.MIXPANEL_TOKEN = '___MIXPANEL_TOKEN___';
       window.NODE_ENV = '___NODE_ENV___';
       window.PORT = '___PORT___';
     </script>
