feat(assembly-ui): add cookie banner and modal

--- a/apps/assembly-ui/public/index.html
+++ b/apps/assembly-ui/public/index.html
@@ -22,6 +22,7 @@
       window.MIXPANEL_TOKEN = '___MIXPANEL_TOKEN___';
       window.NODE_ENV = '___NODE_ENV___';
       window.PORT = '___PORT___';
+      window.PORT = '___COOKIE_FIRST_TOKEN___';
     </script>
     <!-- [html-validate-disable wcag/h32, wcag/h37, attribute-allowed-values, element-required-attributes, input-missing-label] -->
   </body>
