--- a/apps/assembly-ui/public/index.html
+++ b/apps/assembly-ui/public/index.html
@@ -23,6 +23,11 @@
       window.NODE_ENV = '___NODE_ENV___';
       window.PORT = '___PORT___';
       window.COOKIE_FIRST_TOKEN = '___COOKIE_FIRST_TOKEN___';
+      window.API_URL_CLIENT_SIDE = '___API_URL_CLIENT_SIDE___';
+
+      window.FB_PIXEL_ID = '___FB_PIXEL_ID___';
+      window.TW_PIXEL_ID = '___TW_PIXEL_ID___';
+      window.MIXPANEL_TOKEN = '___MIXPANEL_TOKEN___';
     </script>
     <!-- [html-validate-disable wcag/h32, wcag/h37, attribute-allowed-values, element-required-attributes, input-missing-label] -->
   </body>
