feat(assembly-ui): added told
closes: MP-3898

--- a/apps/assembly-ui/public/index.html
+++ b/apps/assembly-ui/public/index.html
@@ -19,12 +19,11 @@
       window.ASSEMBLY_URL_SERVER_SIDE = '___ASSEMBLY_URL_SERVER_SIDE___';
       window.PORT = '___PORT___';
       window.FRONT_URL = '___FRONT_URL___';
-      window.MIXPANEL_TOKEN = '___MIXPANEL_TOKEN___';
       window.NODE_ENV = '___NODE_ENV___';
       window.PORT = '___PORT___';
       window.COOKIE_FIRST_TOKEN = '___COOKIE_FIRST_TOKEN___';
       window.API_URL_CLIENT_SIDE = '___API_URL_CLIENT_SIDE___';
-
+      window.TOLD_TOKEN = '___TOLD_TOKEN___';
       window.FB_PIXEL_ID = '___FB_PIXEL_ID___';
       window.TW_PIXEL_ID = '___TW_PIXEL_ID___';
       window.MIXPANEL_TOKEN = '___MIXPANEL_TOKEN___';
