feat(front): add told make.org
closes: MP-3899

--- a/apps/front/public/index.html
+++ b/apps/front/public/index.html
@@ -16,6 +16,7 @@
       window.NODE_ENV = '___NODE_ENV___';
       window.PORT = '___PORT___';
       window.HOTJAR_TOKEN = '___HOTJAR_TOKEN___';
+      window.TOLD_TOKEN = '___TOLD_TOKEN___';
     </script>
     <!-- [html-validate-disable wcag/h32, wcag/h37, attribute-allowed-values, element-required-attributes, input-missing-label] -->
   </body>
